# shidaa

./: Cargo.toml  Makefile  README.md
src/: errors.rs  generator.rs  main.rs
